Chronicle map JDK9 support